# sol-dev1

advancedmath/: README.md  package-lock.json  package.json
advancedmath/scripts/: cicd.sh
advancedmath/src/calculator/src/: calculator.rs  lib.rs
advancedmath/src/client/: calculator.ts  math.ts  util.ts
hello-solana/: package-lock.json  package.json
hello-solana/src/client/: main.ts
hello-solana/src/program/: Cargo.toml
hello-solana/src/program/src/: lib.rs
simplemath/: package-lock.json  package.json
simplemath/scripts/: cicd.sh
simplemath/src/client/: math.ts  square.ts  sum.ts  util.ts
simplemath/src/square/: Cargo.toml
simplemath/src/square/src/: lib.rs
simplemath/src/sum/: Cargo.toml
simplemath/src/sum/src/: lib.rs
solana-cli/: solana_alpine.Dockerfile
transfer-sol1/: README.md  package.json
transfer-sol1/_cicd/: cicd.sh
transfer-sol1/client/: main.ts
transfer-sol1/program/src/: lib.rs
transfer-sol1/transfer-sol/accounts/: first.json  fourth.json  second.json  third.json
