[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.9"

[dev-dependencies]
solana-program-test = "1.0.0"
solana-sdk = "1.0.0"

[lib]  # configuration for lib, that determines what crate to create
crate-type = ["cdylib", "lib"]
#creates a .so file which allows us to run Solana programs



