[package]
name = "square"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.9.9"

[dev-dependencies]
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"

[lib]  # configuration for lib, that determines what crate to create
crate-type = ["cdylib", "lib"]
#creates a .so file which allows us to run Solana programs

